--- a/index.html
+++ b/index.html
@@ -159,13 +159,12 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.0&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/13 (月)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/14 (火)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
             このサイトは、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">Github
                 pages</a>を利用して作成しています。
-            Githubが作成、もしくは承認されたWebサイトではなく、Githubのユーザーが作ったものです。
         </p>
     </footer>
     <script src="bignumber.js/bignumber.min.js"></script>
