--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <h2 class="setting_h2">関数類</h2>
                             <button onclick="clickNum(Math.PI)" class="blueButton">&pi;</button>
                             <button onclick="divHundred()" class="greenButton noLivvic">%</button>
-                            <button onclick="divHundred()" class="greenButton noLivvic">&Sqrt;</button>
+                            <button onclick="sqrtNum()" class="greenButton noLivvic">&Sqrt;</button>
                         </div>
                         <div class="settings">
                             <h2 class="setting_h2">設定</h2>
@@ -96,7 +96,7 @@
                         b
                     </span>
                 </button>
-                <button onclick="clickNum(1)" class="orangeButton upButton smallFont">あまり</button><br>
+                <button onclick="calcMode('%')" class="orangeButton upButton smallFont">あまり</button><br>
                 <button onclick="clickNum(1)" class="blueButton upButton">1</button>
                 <button onclick="clickNum(2)" class="blueButton upButton">2</button>
                 <button onclick="clickNum(3)" class="blueButton upButton">3</button>
@@ -158,7 +158,7 @@
                 rel="noopener noreferrer">multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.1&alpha; (Alpha version)</span>
+            <span>Version: 0.5.2&alpha; (Alpha version)</span>
             <span class="margin-left_div">最終更新日: 2021/12/18 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
