--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                 rel="noopener noreferrer">multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.2&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/18 (土)</span>
+            <span>Version: 0.5.3&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/19 (日)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
