--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBNNFJRVWQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DBNNFJRVWQ');
+    </script>
 </head>
 
 <body>
@@ -167,7 +176,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.31&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/19 (日)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/25 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
