--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBNNFJRVWQ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215856807-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-DBNNFJRVWQ');
+        gtag('config', 'UA-215856807-1');
     </script>
+
 </head>
 
 <body>
@@ -175,7 +176,7 @@
                 rel="noopener noreferrer">multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.31&alpha; (Alpha version)</span>
+            <span>Version: 0.5.32&alpha; (Alpha version)</span>
             <span class="margin-left_div">最終更新日: 2021/12/25 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
