リンク問題の解決

--- a/terms.html
+++ b/terms.html
@@ -126,7 +126,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.33&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/28 (火)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/29 (水)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
