分子入力の対応

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                 <button onclick="clearText(0)" class="pinkButton">C</button>
                 <button onclick="clearText(1)" class="pinkButton">AC</button><br>
                 <button onclick="powNum()" class="greenButton upButton">x&sup2;</button>
-                <button onclick="addFraction()" class="orangeButton">
+                <button onclick="addFraction(true)" class="orangeButton">
                     <span class="topLittle">a</span><span class="fraction"><span class="numerator">b</span><br>
                         <span>c</span>
                     </span>
                 </button>
-                <button onclick="addFraction()" class="orangeButton"><span class="fraction"><span
+                <button onclick="addFraction(false)" class="orangeButton"><span class="fraction"><span
                             class="numerator">a</span><br>
                         <span>b</span>
                     </span>
@@ -179,13 +179,12 @@
                 rel="noopener noreferrer">multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.33&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/29 (水)</span>
-            <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
+            <span>Version: 0.5.34&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/9 (日)</span>
+            <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
-            このサイトは、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">GitHub
-                Pages</a>を利用して作成しています。また、<a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener noreferrer">
+            このサイトは、<a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener noreferrer">
                     Apache Licenses, Version 2.0
                 </a>によりライセンスされています。
         </p>
