--- a/terms.html
+++ b/terms.html
@@ -88,7 +88,8 @@
                 limitations under the License.</p>
             <p>Also, the calculation result may be incorrect due to a bug. We do not
                 guarantee the calculation results, but we would appreciate it if you could report it.</p>
-            <p>The multum logo and icons are not registered trademarks, but the redistribution of materials only is prohibited.</p>
+            <p>The multum logo and icons are not registered trademarks, but the redistribution of materials only is
+                prohibited.</p>
             <p>In addition, please report the use of images from the inquiry column.</p>
         </div>
     </section>
@@ -103,8 +104,9 @@
         <div>
             <p>This site uses Google Analytics to collect browsing data anonymously.</p>
             <p>The data collected will be used to improve this site and will not be disclosed to the outside world.</p>
-            <p>Also, the calculator's calculation history is never sent to the server, and the calculation history is stored on your
-            device.</p>
+            <p>Also, the calculator's calculation history is never sent to the server, and the calculation history is
+                stored on your
+                device.</p>
         </div>
     </section>
 
@@ -125,14 +127,12 @@
                 rel="noopener noreferrer">multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.33&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/29 (水)</span>
-            <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
+            <span>Version: 0.5.34&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/9 (日)</span>
+            <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
-            このサイトは、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">GitHub
-                Pages</a>を利用して作成しています。また、<a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank"
-                rel="noopener noreferrer">
+            このサイトは、<a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener noreferrer">
                 Apache Licenses, Version 2.0
             </a>によりライセンスされています。
         </p>
