--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web電卓 multum - 分数を使える電卓</title>
+    <meta name="keywords" content="分数,電卓,あまり,計算,web,Multum,関数電卓,無料,高機能,シンプル">
+    <meta name="description" content="Web電卓 Multumは、分数やあまりなど、様々な計算に対応した、シンプルなWebで使える電卓です。
+    Web上でインストールせずに無料で利用できます。履歴や関数類も使えます。">
+    <meta name="author" content="Rio Gunawan">
+    <title>Web電卓 Multum - 分数を使える電卓</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bignumber.js/bignumber.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -32,15 +37,15 @@
         <nav class="header_nav" id="header_nav">
             <div id="g-nav-list">
                 <ul class="header_nav" id="header_list">
-                    <li class="header_list"><a href="#about" class="header_link">multumについて</a></li>
+                    <li class="header_list"><a href="#about" class="header_link">Multumについて</a></li>
                     <li class="header_list"><a href="#howUse" class="header_link">使い方</a></li>
                     <li class="header_list"><a href="#inquiry" class="header_link">お問い合わせ</a></li>
                 </ul>
             </div>
         </nav>
-        <img src="images/favicon.png" id="title_icon" alt="multum アイコン">
+        <img src="images/favicon.png" id="title_icon" alt="Multum アイコン">
         <div id="title">
-            <img src="images/title.png" id="title_image" alt="multumタイトル画像">
+            <img src="images/title.png" id="title_image" alt="Multumタイトル画像">
             <strong class="header_strong">分数などを扱える電卓</strong>
         </div>
     </header>
@@ -137,18 +142,18 @@
         </div>
     </main>
     <section id="about">
-        <h2>multumについて</h2>
-        <img src="images/main.png" class="mainPicture" alt="multumの画像">
-        <p>
-            Web電卓 multum (ムルトゥム) は、Webで使えるインストール不要の無料電卓アプリです。<br>
-            主に、四則演算や分数、あまり、関数類(ルートやn乗など)が使えます。<br>
-            分数が使える電卓が少ないので、作成しました。<br>
-            ブックマークに登録し、何度もアクセスしていただたり、SNS等でシェアしていただけると嬉しいです。
-        </p>
-        <p>
-            「multum」とは、ラテン語で「多くの、たくさんの」という意味があります。<br>
-            この名前には、多くの機能があるこの電卓を、多くの人に使ってもらいたい、という願いが込められています。
-        </p>
+        <h2>Multumについて</h2>
+        <img src="images/main.png" class="mainPicture" alt="Multumの画像">
+        <div>
+            <p>Web電卓 Multum (ムルタム) は、Webで使えるインストール不要の無料電卓アプリです。</p>
+            <p>主に、四則演算や分数、あまり、関数類(ルートやn乗など)が使えます。</p>
+            <p>分数を計算できるWeb上の電卓が少ないので、作成しました。</p>
+            <p>ブックマークに登録し、何度もアクセスしていただたり、SNS等でシェアしていただけると嬉しいです。</p>
+        </div>
+        <div>
+            <p>「Multum」とは、ラテン語で「多くの、たくさんの」という意味があります。</p>
+            <p>この名前には、多くの機能があるこの電卓を、多くの人に使ってもらいたい、という願いが込められています。</p>
+        </div>
     </section>
     <section id="howUse">
         <h2>使い方</h2>
@@ -167,26 +172,26 @@
                     <span class="material-icons-round">&#xE5D8;</span><br>
                     <span id="toTop">トップへ</span></span></a></p>
         <p class="footer_1">
-            <span class="footer_span">Web電卓 multum</span>
+            <span class="footer_span">Web電卓 Multum</span>
         </p>
         <nav class="footer_nav">
             <a href="#" class="footer_a">トップ</a>
-            <a href="#about" class="footer_a">multumについて</a>
+            <a href="#about" class="footer_a">Multumについて</a>
             <a href="#howUse" class="footer_a">使い方</a>
             <a href="#inquiry" class="footer_a">お問い合わせ</a>
             <a href="./terms.html" class="footer_a">利用規約</a>
             <a href="https://github.com/Rio-Gunawan/calc-web" class="footer_a" target="_blank"
-                rel="noopener noreferrer">multumのソースコード</a>
+                rel="noopener noreferrer">Multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.34&alpha; (Alpha version)</span>
+            <span>Version: 0.5.35&alpha; (Alpha version)</span>
             <span class="margin-left_div">最終更新日: 2022/1/9 (日)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
             このサイトは、<a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener noreferrer">
-                    Apache Licenses, Version 2.0
-                </a>によりライセンスされています。
+                Apache Licenses, Version 2.0
+            </a>によりライセンスされています。
         </p>
     </footer>
     <script src="main.js"></script>
