--- a/terms.html
+++ b/terms.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>利用規約 | Web電卓 multum - 分数を使える電卓</title>
+    <meta name="keywords" content="分数,電卓,あまり,計算,web,Multum,関数電卓,無料,高機能,シンプル">
+    <meta name="description" content="Web電卓 Multumの利用規約です。
+    Web電卓 Multumは、分数やあまりなど、様々な計算に対応した、シンプルなWebで使える電卓です。
+        Web上でインストールせずに無料で利用できます。履歴や関数類も使えます。">
+    <meta name="author" content="Rio Gunawan">
+    <title>利用規約 | Web電卓 Multum - 分数を使える電卓</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bignumber.js/bignumber.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -31,15 +37,15 @@
         <nav class="header_nav" id="header_nav">
             <div id="g-nav-list">
                 <ul class="header_nav" id="header_list">
-                    <li class="header_list"><a href="./index.html" class="header_link">multumホーム</a></li>
+                    <li class="header_list"><a href="./index.html" class="header_link">Multumホーム</a></li>
                     <li class="header_list"><a href="./index.html#howUse" class="header_link">使い方</a></li>
                     <li class="header_list"><a href="./index.html#inquiry" class="header_link">お問い合わせ</a></li>
                 </ul>
             </div>
         </nav>
-        <img src="images/favicon.png" id="title_icon" alt="multum アイコン">
+        <img src="images/favicon.png" id="title_icon" alt="Multum アイコン">
         <div id="title">
-            <img src="images/title.png" id="title_image" alt="multumタイトル画像">
+            <img src="images/title.png" id="title_image" alt="Multumタイトル画像">
             <strong class="header_strong">分数などを扱える電卓</strong>
         </div>
     </header>
@@ -51,12 +57,13 @@
     <h1 id="title_message">利用規約・プライバシーポリシー</h1>
     <p class="center_p">このサイトを利用する場合、この規約に同意したことになります。</p>
     <p class="index">
-        <a href="#terms" class="blueLink">利用規約</a><a href="#privacy" class="blueLink">プライバシーポリシー</a>
+        <a href="#terms" class="blueLink">利用規約</a><a href="#privacy" class="blueLink">プライバシーポリシー</a><a href="#thanks"
+            class="blueLink">謝辞</a>
     </p>
     <section id="terms">
         <h2>利用規約</h2>
         <div>
-            <p>Web電卓 multumは、<a class="normalLink" href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank"
+            <p>Web電卓 Multumは、<a class="normalLink" href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank"
                     rel="noopener noreferrer">Apache Licenses, Version 2.0
                 </a>に基づいてライセンスされます。あなたがこのファイルを使用するためには、本ライセンスに従わなければなりません。本ライセンスのコピーは下記の場所から入手できます。
             </p>
@@ -68,7 +75,7 @@
                 明示黙示を問わず、いかなる保証も条件もなしに「現状のまま」頒布されます。
                 本ライセンスでの権利と制限を規定した文言については、本ライセンスを参照してください。</p>
             <p>また、計算結果はバグにより間違っている場合もあります。計算結果は保証したしませんが、報告していただけると嬉しいです。</p>
-            <p>multumのロゴやアイコンは登録商標ではありませんが、素材のみの再配布を禁止します。</p>
+            <p>Multumのロゴやアイコンは登録商標ではありませんが、素材のみの再配布を禁止します。</p>
             <p>また、画像の利用のさいはお問い合わせ欄より報告をお願いいたします。</p>
         </div>
         <div>
@@ -88,7 +95,7 @@
                 limitations under the License.</p>
             <p>Also, the calculation result may be incorrect due to a bug. We do not
                 guarantee the calculation results, but we would appreciate it if you could report it.</p>
-            <p>The multum logo and icons are not registered trademarks, but the redistribution of materials only is
+            <p>The Multum logo and icons are not registered trademarks, but the redistribution of materials only is
                 prohibited.</p>
             <p>In addition, please report the use of images from the inquiry column.</p>
         </div>
@@ -110,24 +117,48 @@
         </div>
     </section>
 
+    <section id="thanks">
+        <h2>謝辞</h2>
+        <p>Multumが使用したサービスの一覧です。</p>
+        <div>
+            <p>このサイトは、
+                <a href="http://www.sitemapxml.jp/" target="_blank"
+                    rel="noopener noreferrer">サイトマップを作成-自動生成ツール「sitemap.xml Editor」
+                    http://www.sitemapxml.jp/</a>で、Google向けのサイトマップを作っています。
+            </p>
+            <p>また、<a href="https://fonts.google.com/icons" target="_blank" rel="noopener noreferrer">Google Fonts
+                    Material Icons</a>のアイコンを利用しています。
+            </p>
+            <p>フォントについては、<a href="https://fonts.google.com/specimen/Livvic" target="_blank"
+                    rel="noopener noreferrer">Livvic(英字や数字)</a>と、
+                <a href="https://fonts.google.com/noto/specimen/Noto+Sans+JP" target="_blank"
+                    rel="noopener noreferrer">Noto Sans Japanese(日本語)</a>を利用しています。
+            </p>
+            <p>また、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">
+                    Github
+                </a>でバージョン管理をしています。
+            </p>
+        </div>
+    </section>
+
     <footer id="footer">
         <p id="page-top"><a href="#"><span class="page-top-text">
                     <span class="material-icons-round">&#xE5D8;</span><br>
                     <span id="toTop">トップへ</span></span></a></p>
         <p class="footer_1">
-            <span class="footer_span">Web電卓 multum</span>
+            <span class="footer_span">Web電卓 Multum</span>
         </p>
         <nav class="footer_nav">
             <a href="./index.html" class="footer_a">ホーム</a>
-            <a href="./index.html#about" class="footer_a">multumについて</a>
+            <a href="./index.html#about" class="footer_a">Multumについて</a>
             <a href="./index.html#howUse" class="footer_a">使い方</a>
             <a href="./index.html#inquiry" class="footer_a">お問い合わせ</a>
             <a href="./terms.html" class="footer_a">利用規約</a>
             <a href="https://github.com/Rio-Gunawan/calc-web" class="footer_a" target="_blank"
-                rel="noopener noreferrer">multumのソースコード</a>
+                rel="noopener noreferrer">Multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.34&alpha; (Alpha version)</span>
+            <span>Version: 0.5.35&alpha; (Alpha version)</span>
             <span class="margin-left_div">最終更新日: 2022/1/9 (日)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
