フォントの変更

--- a/terms.html
+++ b/terms.html
@@ -46,7 +46,7 @@
         <img src="images/favicon.png" id="title_icon" alt="Multum アイコン">
         <div id="title">
             <img src="images/title.png" id="title_image" alt="Multumタイトル画像">
-            <strong class="header_strong">分数などを扱える電卓</strong>
+            <strong class="header_strong">分数やあまりなども使える電卓</strong>
         </div>
     </header>
 
@@ -58,7 +58,7 @@
     <p class="center_p">このサイトを利用する場合、この規約に同意したことになります。</p>
     <p class="index">
         <a href="#terms" class="blueLink">利用規約</a><a href="#privacy" class="blueLink">プライバシーポリシー</a><a href="#thanks"
-            class="blueLink">謝辞</a>
+            class="blueLink">クレジット</a>
     </p>
     <section id="terms">
         <h2>利用規約</h2>
@@ -118,7 +118,7 @@
     </section>
 
     <section id="thanks">
-        <h2>謝辞</h2>
+        <h2>クレジット</h2>
         <p>Multumが使用したサービスの一覧です。</p>
         <div>
             <p>このサイトは、
@@ -129,14 +129,22 @@
             <p>また、<a href="https://fonts.google.com/icons" target="_blank" rel="noopener noreferrer">Google Fonts
                     Material Icons</a>のアイコンを利用しています。
             </p>
-            <p>フォントについては、<a href="https://fonts.google.com/specimen/Livvic" target="_blank"
-                    rel="noopener noreferrer">Livvic(英字や数字)</a>と、
+            <p>フォントについては、<a href="https://fonts.google.com/specimen/Roboto" target="_blank"
+                    rel="noopener noreferrer">Roboto(英字や数字)</a>と、
+                <a href="https://fonts.google.com/specimen/Livvic" target="_blank"
+                    rel="noopener noreferrer">Livvic(電卓部分)</a>、
                 <a href="https://fonts.google.com/noto/specimen/Noto+Sans+JP" target="_blank"
                     rel="noopener noreferrer">Noto Sans Japanese(日本語)</a>を利用しています。
             </p>
-            <p>また、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">
-                    Github
-                </a>でバージョン管理をしています。
+            <p>計算用のライブラリとして、<a href="https://fonts.google.com/specimen/Livvic" target="_blank"
+                    rel="noopener noreferrer">jQuery</a>と、
+                <a href="https://fonts.google.com/noto/specimen/Noto+Sans+JP" target="_blank" rel="noopener noreferrer">
+                    BigNumber.js
+                </a>を使用しています。
+            </p>
+            <p>アクセスカウンターは、
+                <a href="https://www.free-counter.jp/" title="アクセスカウンター">無料アクセスカウンター(https://www.free-counter.jp/)</a>
+                を利用しています。
             </p>
         </div>
     </section>
@@ -158,8 +166,8 @@
                 rel="noopener noreferrer">Multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.35&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/9 (日)</span>
+            <span>Version: 0.5.36&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/13 (木)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
@@ -167,6 +175,12 @@
                 Apache Licenses, Version 2.0
             </a>によりライセンスされています。
         </p>
+        <div class="counter">
+            アクセスカウンター:
+            <a href="https://www.free-counter.jp/" title="アクセスカウンター">
+                <img src="https://www.f-counter.net/j/47/1642065871/" alt="アクセスカウンター">
+            </a>
+        </div>
     </footer>
     <script src="main.js"></script>
 </body>
