--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web電卓 Multumは、分数やあまりなど、様々な計算に対応した、シンプルなWebで使える電卓です。
     Web上でインストールせずに無料で利用できます。履歴や関数類も使えます。">
     <meta name="author" content="Rio Gunawan">
-    <title>Web電卓 Multum - 分数を使える電卓</title>
+    <title>Web電卓 Multum - 分数やあまりなども使える電卓</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
@@ -46,12 +46,11 @@
         <img src="images/favicon.png" id="title_icon" alt="Multum アイコン">
         <div id="title">
             <img src="images/title.png" id="title_image" alt="Multumタイトル画像">
-            <strong class="header_strong">分数などを扱える電卓</strong>
+            <strong class="header_strong">分数やあまりなども使える電卓</strong>
         </div>
     </header>
     <div id="margin_div"></div>
-    <h1 id="title_message">分数も使える、高機能な関数電卓</h1>
-    <p class="center_p">ボタンを押して計算をしてみましょう。詳しい使い方はスクロールすると見れます。</p>
+    <h1 id="title_message">Web電卓 Multum - 分数やあまりなども使える電卓</h1>
     <div class="alert">
         <h2>注意</h2>
         <p>現在このサイトは&alpha;(アルファ)版となっております。<br>
@@ -184,8 +183,8 @@
                 rel="noopener noreferrer">Multumのソースコード</a>
         </nav>
         <p class="footer_p">
-            <span>Version: 0.5.35&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/9 (日)</span>
+            <span>Version: 0.5.36&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/13 (木)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
@@ -193,6 +192,12 @@
                 Apache Licenses, Version 2.0
             </a>によりライセンスされています。
         </p>
+        <div class="counter">
+            アクセスカウンター:
+            <a href="https://www.free-counter.jp/" title="アクセスカウンター">
+                <img src="https://www.f-counter.net/j/47/1642065871/" alt="アクセスカウンター">
+            </a>
+        </div>
     </footer>
     <script src="main.js"></script>
     <script src="calc_contorol.js"></script>
