マテリアルアイコンを、svgにした

--- a/terms.html
+++ b/terms.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bignumber.js/bignumber.min.js"></script>
@@ -150,9 +148,14 @@
     </section>
 
     <footer id="footer">
-        <p id="page-top"><a href="#"><span class="page-top-text">
-                    <span class="material-icons-round">&#xE5D8;</span><br>
-                    <span id="toTop">トップへ</span></span></a></p>
+        <p id="page-top">
+            <a href="#">
+                <span class="page-top-text">
+                    <img src="./images/arrow-up.svg"><br>
+                    <span id="toTop">トップへ</span>
+                </span>
+            </a>
+        </p>
         <p class="footer_1">
             <span class="footer_span">Web電卓 Multum</span>
         </p>
@@ -167,7 +170,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/13 (木)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/14 (金)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
