--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bignumber.js/bignumber.min.js"></script>
@@ -91,22 +89,23 @@
         <div class="downCalc">
             <div class="hamburger">
                 <span class="nav_item" id="functions">
-                    <span class="material-icons-round md-36" title="関数" id="f-b">&#xE24A;</span>
                     <!--関数(functions)-->
+                    <img src="./images/functions.svg" title="関数" id="f-b" class="md-36">
                 </span><br>
                 <span class="nav_item" id="history">
-                    <span class="material-icons-round md-36" title="履歴" id="h-b">&#xE889;</span>
+                    <img src="./images/history.svg" title="履歴" id="h-b" class="md-36">
                     <!--履歴(history)-->
                 </span><br>
                 <span class="nav_item" id="settings">
-                    <span class="material-icons-round md-36" title="設定" id="s-b">&#xE8B8;</span>
+                    <img src="./images/settings.svg" title="設定" id="s-b" class="md-36">
                     <!--設定(settings)-->
                 </span>
             </div>
             <div id="buttons">
                 <button onclick="changeCode()" class="greenButton">+/&minus;</button>
                 <button onclick="backspace()" class="pinkButton downLittle">
-                    <span class="material-icons-outlined downLittleText">&#xE14A;</span></button>
+                    <img src="./images/backscape.svg" class="downLittle">
+                </button>
                 <button onclick="clearText(0)" class="pinkButton">C</button>
                 <button onclick="clearText(1)" class="pinkButton">AC</button><br>
                 <button onclick="powNum()" class="greenButton upButton">x&sup2;</button>
@@ -167,9 +166,14 @@
         src="https://docs.google.com/forms/d/e/1FAIpQLScJezvYKizirmeFHnASJ0DIIRz7payZHYKDvZvqZYcoUbkyJQ/viewform?embedded=true">
     </iframe>
     <footer id="footer">
-        <p id="page-top"><a href="#"><span class="page-top-text">
-                    <span class="material-icons-round">&#xE5D8;</span><br>
-                    <span id="toTop">トップへ</span></span></a></p>
+        <p id="page-top">
+            <a href="#">
+                <span class="page-top-text">
+                    <img src="./images/arrow-up.svg"><br>
+                    <span id="toTop">トップへ</span>
+                </span>
+            </a>
+        </p>
         <p class="footer_1">
             <span class="footer_span">Web電卓 Multum</span>
         </p>
@@ -184,7 +188,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/13 (木)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/14 (金)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
