alt属性の追加

--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
             <div class="hamburger">
                 <span class="nav_item" id="functions">
                     <!--関数(functions)-->
-                    <img src="./images/functions.svg" title="関数" id="f-b" class="md-36">
+                    <img src="./images/functions.svg" title="関数" id="f-b" class="md-36" alt="関数">
                 </span><br>
                 <span class="nav_item" id="history">
-                    <img src="./images/history.svg" title="履歴" id="h-b" class="md-36">
+                    <img src="./images/history.svg" title="履歴" id="h-b" class="md-36" alt="履歴">
                     <!--履歴(history)-->
                 </span><br>
                 <span class="nav_item" id="settings">
-                    <img src="./images/settings.svg" title="設定" id="s-b" class="md-36">
+                    <img src="./images/settings.svg" title="設定" id="s-b" class="md-36" alt="設定">
                     <!--設定(settings)-->
                 </span>
             </div>
             <div id="buttons">
                 <button onclick="changeCode()" class="greenButton">+/&minus;</button>
                 <button onclick="backspace()" class="pinkButton downLittle">
-                    <img src="./images/backscape.svg" class="downLittle">
+                    <img src="./images/backscape.svg" class="downLittle" alt="削除">
                 </button>
                 <button onclick="clearText(0)" class="pinkButton">C</button>
                 <button onclick="clearText(1)" class="pinkButton">AC</button><br>
@@ -169,7 +169,7 @@
         <p id="page-top">
             <a href="#">
                 <span class="page-top-text">
-                    <img src="./images/arrow-up.svg"><br>
+                    <img src="./images/arrow-up.svg" alt="トップ"><br>
                     <span id="toTop">トップへ</span>
                 </span>
             </a>
@@ -188,7 +188,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/14 (金)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/15 (土)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
