--- a/terms.html
+++ b/terms.html
@@ -151,7 +151,7 @@
         <p id="page-top">
             <a href="#">
                 <span class="page-top-text">
-                    <img src="./images/arrow-up.svg"><br>
+                    <img src="./images/arrow-up.svg" alt="トップ"><br>
                     <span id="toTop">トップへ</span>
                 </span>
             </a>
@@ -170,7 +170,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/14 (金)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/15 (土)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
