サーバー関連の変更

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-217301817-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-217301817-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,16 +26,6 @@
     <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bignumber.js/bignumber.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215856807-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-215856807-1');
-    </script>
-
 </head>
 
 <body>
@@ -188,7 +188,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/15 (土)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/16 (日)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
