--- a/terms.html
+++ b/terms.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-217301817-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-217301817-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,16 +27,6 @@
     <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bignumber.js/bignumber.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215856807-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-215856807-1');
-    </script>
-
 </head>
 
 <body>
@@ -35,9 +35,9 @@
         <nav class="header_nav" id="header_nav">
             <div id="g-nav-list">
                 <ul class="header_nav" id="header_list">
-                    <li class="header_list"><a href="./index.html" class="header_link">Multumホーム</a></li>
-                    <li class="header_list"><a href="./index.html#howUse" class="header_link">使い方</a></li>
-                    <li class="header_list"><a href="./index.html#inquiry" class="header_link">お問い合わせ</a></li>
+                    <li class="header_list"><a href="./" class="header_link">Multumホーム</a></li>
+                    <li class="header_list"><a href="./#howUse" class="header_link">使い方</a></li>
+                    <li class="header_list"><a href="./#inquiry" class="header_link">お問い合わせ</a></li>
                 </ul>
             </div>
         </nav>
@@ -50,7 +50,7 @@
 
     <div id="margin_div"></div>
     <nav id="bread">
-        <a href="./index.html" class="blueLink">ホーム</a>&gt;<a href="./terms.html" class="blueLink">利用規約</a>
+        <a href="./" class="blueLink">ホーム</a>&gt;<a href="./terms.html" class="blueLink">利用規約</a>
     </nav>
     <h1 id="title_message">利用規約・プライバシーポリシー</h1>
     <p class="center_p">このサイトを利用する場合、この規約に同意したことになります。</p>
@@ -160,17 +160,17 @@
             <span class="footer_span">Web電卓 Multum</span>
         </p>
         <nav class="footer_nav">
-            <a href="./index.html" class="footer_a">ホーム</a>
-            <a href="./index.html#about" class="footer_a">Multumについて</a>
-            <a href="./index.html#howUse" class="footer_a">使い方</a>
-            <a href="./index.html#inquiry" class="footer_a">お問い合わせ</a>
+            <a href="./" class="footer_a">ホーム</a>
+            <a href="./#about" class="footer_a">Multumについて</a>
+            <a href="./#howUse" class="footer_a">使い方</a>
+            <a href="./#inquiry" class="footer_a">お問い合わせ</a>
             <a href="./terms.html" class="footer_a">利用規約</a>
             <a href="https://github.com/Rio-Gunawan/calc-web" class="footer_a" target="_blank"
                 rel="noopener noreferrer">Multumのソースコード</a>
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/15 (土)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/16 (日)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
