--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <meta http-equiv="default-style" content="style.css">
     <script src="jquery-3.6.0.min.js"></script>
-    <script src="bignumber.js/bignumber.min.js"></script>
+    <script src="bignumber.js/bignumber.js"></script>
 </head>
 
 <body>
@@ -188,7 +188,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.5.36&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2022/1/16 (日)</span>
+            <span class="margin-left_div">最終更新日: 2022/1/19 (水)</span>
             <span class="margin-left_div copy">&copy; 2021-2022 Rio Gunawan</span>
         </p>
         <p class="footer_3">
