ヘッダーのCSS変更

--- a/terms.html
+++ b/terms.html
@@ -138,14 +138,12 @@
             </p>
             <p>フォントについては、<a href="https://fonts.google.com/specimen/Roboto" target="_blank"
                     rel="noopener noreferrer">Roboto(英字や数字)</a>と、
-                <a href="https://fonts.google.com/specimen/Livvic" target="_blank"
-                    rel="noopener noreferrer">Livvic(電卓部分の数字)</a>、
                 <a href="https://fonts.google.com/noto/specimen/Noto+Sans+JP" target="_blank"
                     rel="noopener noreferrer">Noto Sans Japanese(日本語)</a>を利用しています。
             </p>
-            <p>計算用のライブラリとして、<a href="https://fonts.google.com/specimen/Livvic" target="_blank"
+            <p>計算用のライブラリとして、<a href="https://jquery.com/" target="_blank"
                     rel="noopener noreferrer">jQuery</a>と、
-                <a href="https://fonts.google.com/noto/specimen/Noto+Sans+JP" target="_blank" rel="noopener noreferrer">
+                <a href="https://mikemcl.github.io/bignumber.js/" target="_blank" rel="noopener noreferrer">
                     BigNumber.js
                 </a>を使用しています。
             </p>
